--- a/just-fun/koa/server/views/login.hbs
+++ b/just-fun/koa/server/views/login.hbs
@@ -39,6 +39,7 @@
           <div class="form-login__line">
             <button class="form-login__button" type="submit">Войти</button>
           </div>
+          <div class="status">{{ loginStatus }}</div>
         </form>
       </div>
     </header>
