--- a/just-fun/koa/server/views/index.hbs
+++ b/just-fun/koa/server/views/index.hbs
@@ -8,10 +8,10 @@
     <meta content="" name="keywords">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta content="ie=edge" http-equiv="x-ua-compatible">
-    <link rel="stylesheet" href="/assets/css/foundation.min.css?rel=0.0.1">
-    <link rel="stylesheet" href="/assets/css/app.min.css?rel=0.0.1">
-    <script src="/assets/js/foundation.min.js?rel=0.0.1" defer></script>
-    <script src="/assets/js/app.min.js?rel=0.0.1" defer></script><!--[if lt IE 9]>
+    <link rel="stylesheet" href="/assets/css/foundation.css">
+    <link rel="stylesheet" href="/assets/css/app.css">
+    <script src="/assets/js/foundation.js" defer></script>
+    <script src="/assets/js/app.js" defer></script><!--[if lt IE 9]>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script><![endif]-->
   </head>
@@ -55,19 +55,19 @@
         <div class="life__slogan">У музыки нет возраста и нации, <br/> однажды мы уйдём, а она останется.</div>
         <ul class="life__skills">
           <li class="life__skill">
-            <div class="life__skill-number">12</div>
+            <div class="life__skill-number">{{ skills.age }}</div>
             <div class="life__skill-text">Возраст начала занятий на скрипке</div>
           </li>
           <li class="life__skill">
-            <div class="life__skill-number">76</div>
+            <div class="life__skill-number">{{ skills.concerts }}</div>
             <div class="life__skill-text">Концертов отыграл</div>
           </li>
           <li class="life__skill">
-            <div class="life__skill-number">30</div>
+            <div class="life__skill-number">{{ skills.cities }}</div>
             <div class="life__skill-text">Максимальное число городов в туре</div>
           </li>
           <li class="life__skill">
-            <div class="life__skill-number">20</div>
+            <div class="life__skill-number">{{ skills.years}}</div>
             <div class="life__skill-text">Лет на сцене в качестве скрипача</div>
           </li>
         </ul><a class="life__link" href="http://">Читать историю</a>
@@ -78,78 +78,16 @@
         <div class="product__subtitle subtitle">Товары от студии Архипова</div>
         <h2 class="product__title title">Мой личный бренд</h2>
         <ul class="product__list">
-          <li class="product__item"><img class="product__img" src="./assets/img/products/Work1.jpg">
+          {{#each products}}
+          <li class="product__item"><img class="product__img" src={{ this.photo }}>
             <div class="product__hover">
               <div class="product__description">
-                <div class="product__name">Вино вдохновение</div>
-                <div class="product__price">$ 600</div>
+                <div class="product__name">{{ this.name }}</div>
+                <div class="product__price"> {{ this.price }}</div>
               </div>
             </div>
           </li>
-          <li class="product__item"><img class="product__img" src="./assets/img/products/Work2.jpg">
-            <div class="product__hover">
-              <div class="product__description">
-                <div class="product__name">Вино вдохновение</div>
-                <div class="product__price">$ 600</div>
-              </div>
-            </div>
-          </li>
-          <li class="product__item"><img class="product__img" src="./assets/img/products/Work3.jpg">
-            <div class="product__hover">
-              <div class="product__description">
-                <div class="product__name">Вино вдохновение</div>
-                <div class="product__price">$ 600</div>
-              </div>
-            </div>
-          </li>
-          <li class="product__item"><img class="product__img" src="./assets/img/products/Work4.jpg">
-            <div class="product__hover">
-              <div class="product__description">
-                <div class="product__name">Вино вдохновение</div>
-                <div class="product__price">$ 600</div>
-              </div>
-            </div>
-          </li>
-          <li class="product__item"><img class="product__img" src="./assets/img/products/Work5.jpg">
-            <div class="product__hover">
-              <div class="product__description">
-                <div class="product__name">Вино вдохновение</div>
-                <div class="product__price">$ 600</div>
-              </div>
-            </div>
-          </li>
-          <li class="product__item"><img class="product__img" src="./assets/img/products/Work6.jpg">
-            <div class="product__hover">
-              <div class="product__description">
-                <div class="product__name">Вино вдохновение</div>
-                <div class="product__price">$ 600</div>
-              </div>
-            </div>
-          </li>
-          <li class="product__item"><img class="product__img" src="./assets/img/products/Work7.jpg">
-            <div class="product__hover">
-              <div class="product__description">
-                <div class="product__name">Вино вдохновение</div>
-                <div class="product__price">$ 600</div>
-              </div>
-            </div>
-          </li>
-          <li class="product__item"><img class="product__img" src="./assets/img/products/Work8.jpg">
-            <div class="product__hover">
-              <div class="product__description">
-                <div class="product__name">Вино вдохновение</div>
-                <div class="product__price">$ 600</div>
-              </div>
-            </div>
-          </li>
-          <li class="product__item"><img class="product__img" src="./assets/img/products/Work9.jpg">
-            <div class="product__hover">
-              <div class="product__description">
-                <div class="product__name">Вино вдохновение</div>
-                <div class="product__price">$ 600</div>
-              </div>
-            </div>
-          </li>
+          {{/each}}
         </ul>
       </div>
     </section>
@@ -173,12 +111,13 @@
           <div class="form-email__line">
             <button class="form-email__button button" type="submit">Отправить</button>
           </div>
+          <div class="status">{{ indexStatus }}</div>
         </form>
       </div>
     </section>
     <footer class="footer">
       <div class="container footer__container">
-        <div class="footer__auth"> <a class="title-name" href="/login.html">Авторизация<span class="title-name__doter">.</span></a></div>
+        <div class="footer__auth"> <a class="title-name" href="/login">Авторизация<span class="title-name__doter">.</span></a></div>
         <div class="footer__social">
           <ul class="social">
             <li class="social__item"><a class="social__link" href="http://"><i class="fab fa-linkedin-in"></i></a></li>
