--- a/just-fun/express/views/shop/product-list.pug
+++ b/just-fun/express/views/shop/product-list.pug
@@ -1,4 +1,4 @@
-extend layouts/main-layout.pug
+extend ../layouts/main-layout.pug
 
 block styles
     link(rel="stylesheet" href="/css/product.css")
