--- a/just-fun/express/views/layouts/main-layout.pug
+++ b/just-fun/express/views/layouts/main-layout.pug
@@ -21,5 +21,7 @@ html
                     li.main-header__item
                         a(href="/admin/add-product", class=(path === '/admin/add-product' ? 'active' : '')) Add Product
                     li.main-header__item
-                        a(href="/admin/products", class=(path === '/admin/products' ? 'active' : '')) Admin Products       
+                        a(href="/admin/products", class=(path === '/admin/products' ? 'active' : '')) Admin Products
+                    li.main-header__item
+                        a(href="/orders", class=(path === '/orders' ? 'active' : '')) Orders      
         block content
