--- a/just-fun/express/views/shop/product-list.pug
+++ b/just-fun/express/views/shop/product-list.pug
@@ -12,10 +12,11 @@ block content
                     header.card__header
                         h1.product__title #{product.title}
                     div.card__image
-                        img(src="#{product.imageUrl}" alt="#{product.title}")
+                        img(src=" #{product.imageUrl} " alt=" #{product.title} ")
                     div.card__content
                         h2.product__price #{product.price}
                         p.product__description #{product.description}
                     div.card__actions
+                        a.btn(href="/products/#{product.id}") Details
                         form(action="/add-to-cart" method="POST")
                             button.btn Add to Cart
