--- a/just-fun/express/views/shop/product-item.pug
+++ b/just-fun/express/views/shop/product-item.pug
@@ -4,7 +4,7 @@ block styles
     link(rel="stylesheet" href="/css/product.css")
 block content
     main
-        h1 My Product
+        h1 #{pageTitle}
         .grid
             article.card.product-item
                 header.card__header
@@ -15,5 +15,4 @@ block content
                     h2.product__price #{product.price}
                     p.product__description #{product.description}
                 div.card__actions
-                    form(action="/add-to-cart" method="POST")
-                        button.btn Add to Cart
+                    include ../includes/add-to-cart.pug
