--- a/just-fun/express/views/shop/product-list.pug
+++ b/just-fun/express/views/shop/product-list.pug
@@ -18,5 +18,4 @@ block content
                         p.product__description #{product.description}
                     div.card__actions
                         a.btn(href=`/products/${product.id}`) Details
-                        form(action="/add-to-cart" method="POST")
-                            button.btn Add to Cart
+                        include ../includes/add-to-cart.pug
