--- a/just-fun/express/views/admin/edit-product.pug
+++ b/just-fun/express/views/admin/edit-product.pug
@@ -6,17 +6,20 @@ block styles
 
 block content
         main
-            form.product-form(action="/admin/add-product" method="POST")
+            form.product-form(action=(editing ? "/admin/edit-product" : "/admin/add-product") method="POST")
                 .form-control
                     label(for="title") Title
-                    input(type="text" name="title")#title
+                    input(type="text" name="title" value=(editing ? product.title : ''))#title
                 .form-control
                     label(for="imageUrl") Image Url
-                    input(type="text" name="imageUrl")#imageUrl
+                    input(type="text" name="imageUrl" value=(editing ? product.imageUrl : ''))#imageUrl
                 .form-control
                     label(for="description") Description
-                    textarea(name="description" rows="5")#description
+                    textarea(name="description" rows="5" value=(editing ? product.description : ''))#description
                 .form-control
                     label(for="price") Price
                     input(type="number" name="price" step="0.01")#price
-                button.btn(type="submit") Add Product
+                    if (editing) 
+                        button.btn(type="submit") update Product
+                    else 
+                        button.btn(type="submit") Add Product
