--- a/just-fun/express/views/admin/edit-product.pug
+++ b/just-fun/express/views/admin/edit-product.pug
@@ -15,10 +15,14 @@ block content
                     input(type="text" name="imageUrl" value=(editing ? product.imageUrl : ''))#imageUrl
                 .form-control
                     label(for="description") Description
-                    textarea(name="description" rows="5" value=(editing ? product.description : ''))#description
+                    textarea(name="description" rows="5")#description
+                        if (editing) 
+                            #{product.description}
                 .form-control
                     label(for="price") Price
-                    input(type="number" name="price" step="0.01")#price
+                    input(type="number" name="price" step="0.01" value=(editing ? product.price : ''))#price
+                    if (editing) 
+                        input(type="hidden" value=product.id name="productId")
                     if (editing) 
                         button.btn(type="submit") update Product
                     else 
